fix in UI overlaps

--- a/R/www/css/style.css
+++ b/R/www/css/style.css
@@ -74,6 +74,10 @@ label {
 .btn-default-3D {
   margin: 5px;
 }
+
+.Setting_button {
+  margin: 3%;
+}
  /*
 # CSS Main Page  -----------------------------------------------------------------
 */
